--- a/countriesOfThePersianGulf.html
+++ b/countriesOfThePersianGulf.html
@@ -14,6 +14,7 @@
             height: 100%;
             margin: 0;
             font-family: Verdana;
+            overflow: hidden;
         }
         
         .background {
